# althist_ml

./: .gitignore  HANDOFF.md  PROJECT_CONTEXT.md  README.md  REPORT.md  pyproject.toml
data/analysis/: archetypes.jsonl  forward_extension.jsonl  generated_ideas.md  leap_scores.jsonl  task_seeds.jsonl
data/annotations/: annotations.jsonl  annotations.jsonl.pre-dedupe  annotations.jsonl.pre-quarantine
data/cache/: openalex_abstracts.json
examples/: example-paper.json
scripts/: prefetch_abstracts.py
src/althist/: __init__.py  analysis.py  annotate.py  archetype.py  cli.py  corpus.py  embeddings.py  fwdext.py  ideation.py  ingest.py  leap.py  llm.py  prompts.py  remix.py  schema.py  taskseed.py  taxonomy.py  tools.py
src/althist/metrics/: __init__.py  distributional.py  representation.py
tests/: conftest.py  test_corpus_tools.py  test_ideation.py  test_ingest.py  test_metrics.py  test_remix.py  test_taskseed.py  test_taxonomy_analysis.py
