[project]
name = "althist"
version = "0.1.0"
description = "Literature-grounded LLM research ideation on pre-GPU-era ML papers (replication of arXiv:2607.01233 with tool-based paper access, taxonomy-steered fanout, and anti-gaming representation metrics)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.66",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
althist = "althist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/althist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
